<resources>
    <string name="app_name">StudyDeforis</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="display_contact">User Details</string>
    <string name="display_name">Name:</string>
    <string name="display_email">Email:</string>
    <string name="display_username">Username:</string>
    <string name="display_password">Password:</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="get_data">GET DATA</string>
    <string name="parse_data">PARSE DATA</string>
    <string name="activity_display_user_data_row_layout_txtext">Hello</string>
    <string name="splash_textview">Study Deforis</string>
    <string name="loginactivity_text">Not registered yet??</string>
    <string name="action_create_account">CREATE ACCOUNT</string>
    <string name="register_text_fields_mandatory">All the fields are mandatory*</string>
    <string name="signupuserdetails_text">UNDERGRADUATE DETAILS</string>
    <string name="signupuserdetails_collegehint">College</string>
    <string name="signupuserdetails_collegenamehint">college</string>
    <string name="signupuserdetails_coursehint">course</string>
    <string name="signupuserdetails_collegescore">Overall Score</string>
    <string name="signupuserdetails_scoretype">cgpa</string>
    <string name="signupuserdetails_collegescore_hint">%tage</string>
    <string name="signupuserdetails_dream">DREAM FOLLOW UP</string>
    <string name="signupuserdetails_work">WORK EXPERIENCE</string>
    <string name="signupuserdetails_workextimetext">Work Ex./Time:</string>
    <string name="signupuserdetails_savebuton">SAVE</string>
    <string name="OneTimeStartactivity_alumniradio">Alumni</string>
    <string name="OneTimeStartactivity_guestradio">Student/Guest</string>
    <string name="college_profile_name">hello</string>
    <string name="college_profile_type">ddcdc</string>
    <string name="college_profile_fees">fvdf</string>
</resources>
