<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"

    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.himanshu.studydeforis.CollegeProfile">
    <TextView
        android:id="@+id/collegeprofile_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/college_profile_name"
        android:textAppearance="?android:textAppearanceLarge"
        />
    <TextView
        android:id="@+id/collegeprofile_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/college_profile_type"
        android:layout_below="@+id/collegeprofile_name"
        android:layout_alignParentLeft="true"
        android:gravity="start"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        />
    <TextView
        android:id="@+id/collegeprofile_fees"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/college_profile_fees"
        android:layout_toRightOf="@+id/collegeprofile_type"
        android:layout_alignBaseline="@+id/collegeprofile_type"
        android:layout_alignParentRight="true"
        android:gravity="end"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp"
        />

</RelativeLayout>
